# SNN_optimization

./: .gitignore  GPU_MEMORY_FIX.md  PERFORMANCE_AND_FIXES.md  README.md  README_SNOPS_JAX.md  SIMULATION_SPEEDUP_FIX.md  diagnose_simulation_bottleneck.py  pyproject.toml  test_cpu_fallback.py  test_gpu_memory_fix.py  verify_simulation_speedup.py
examples/: simple_simulation.py  test_jit_and_sampling.py
snops_jax/: __init__.py
snops_jax/bo/: __init__.py  acquisition.py  driver.py  gp.py  intensify.py  suggest.py
snops_jax/cli/: __init__.py
snops_jax/config/: default_cbn.yaml  default_sbn.yaml
snops_jax/models/: __init__.py  connectivity.py  eif.py  synapses.py
snops_jax/simulate/: __init__.py  run.py  step.py
snops_jax/stats/: __init__.py  binning.py  cost.py  fa_jax.py  single_pair.py
